# gdpval-template

./: .dockerignore  .env.example  Dockerfile.hud  README.md  config.toml  deliverable_io.py  env.py  native_grading.py  pyproject.toml  tasks.py
tasks/: __init__.py
tasks/acct-afc-audit-sampling/: grader.py  task.py
tasks/medsec-pathology-forms/: grader.py  task.py
tests/: conftest.py  test_env.py  test_grading.py  test_serve.py
