[project]
name = "gdpval-template"
version = "0.1.0"
description = "HUD environment template for GDPval-style knowledge-work evaluations"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hud-python[agents]>=0.6.4",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=4.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false

[tool.uv.sources]
hud-python = { git = "https://github.com/hud-evals/hud-python.git", rev = "v0.6.4" }
