[project]
name = "gdpval-template"
version = "0.1.0"
description = "HUD environment template for GDPval-style knowledge-work evaluations"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hud-python[agents]>=0.6.0",
    # Native deliverable readers (deliverable_io.py).
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
